--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ site_theme               : "default"
 title                    : "个人主页"
 title_separator          : "-"
 name                     : &name "王筱蕾"
-description              : &description "植保2班"
-url                      : https://xlw911.github.io. # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+description              : &description "个人介绍"
+url                      : https://xlw911.github.io/xlw911.github.io. # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "xlw911/xlw911.github.io."
 
