--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "https://pbs.twimg.com/media/Gmd7iz8a8AEkaxA?format=jpg&name=medium"
   name             : "王筱蕾"
   pronouns         : "she"  
   bio              : "个人介绍"
